--- a/CoreEmpty/CoreEmpty.csproj
+++ b/CoreEmpty/CoreEmpty.csproj
@@ -2,7 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TypeScriptToolsVersion>2.8</TypeScriptToolsVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="ClientApp\app.tsx" />
+    <None Remove="ClientApp\Components\MailBox.tsx" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
@@ -10,6 +16,11 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\app.tsx" />
+    <TypeScriptCompile Include="ClientApp\Components\MailBox.tsx" />
   </ItemGroup>
   
   <Target Name="DebugRunWebpack" BeforeTargets="Build">
