--- a/CoreEmpty/package.json
+++ b/CoreEmpty/package.json
@@ -3,16 +3,17 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "typescript": "^2.6.2",
-    "webpack": "^3.10.0"
+    "@types/react": "^16.3.17",
+    "@types/react-dom": "^16.0.6",
+    "awesome-typescript-loader": "^5.0.0",    
+    "source-map-loader": "^0.2.3",
+    "typescript": "^2.9.2",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.6"
   },
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/webpack ./ClientApp/app.js ./wwwroot/dist/bundle.js",
+    "build": "node_modules/.bin/webpack",
     "watch": "npm run build -- --watch",
     "webpk": "node_modules/.bin/webpack",
     "webpkw": "npm run webpk -- --watch"
@@ -20,5 +21,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
+  }
 }
