--- a/CoreEmpty/package.json
+++ b/CoreEmpty/package.json
@@ -5,18 +5,19 @@
   "devDependencies": {
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
-    "awesome-typescript-loader": "^5.0.0",    
+    "aspnet-webpack": "^3.0.0",
+    "awesome-typescript-loader": "^5.0.0",
     "source-map-loader": "^0.2.3",
     "typescript": "^2.9.2",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.6"
+    "webpack-cli": "^3.0.6",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2"
   },
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/webpack",
-    "watch": "npm run build -- --watch",
-    "webpk": "node_modules/.bin/webpack",
-    "webpkw": "npm run webpk -- --watch"
+    "build": "node_modules/.bin/webpack --mode development",
+    "watch": "npm run build -- --watch"
   },
   "keywords": [],
   "author": "",
