--- a/CoreEmpty/appsettings.Development.json
+++ b/CoreEmpty/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "host=localhost;port=54320;database=blogsample2;user id=postgres;password=Kmgep-85;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
